# motion-api

./: Cargo.toml
src/: app.rs  main.rs  test.rs
src/db/: binary.rs  database.rs  db.rs  mod.rs  user_db.rs
src/error/: db_error.rs  error.rs
src/repository/: account_repository.rs  block_repository.rs  content_repository.rs  metadata_repository.rs  mod.rs  page_repository.rs  style_repository.rs
src/routes/: mod.rs  test.rs
src/routes/account/: auth_route.rs
src/routes/client/: editor_route.rs  mod.rs  page_route.rs
src/routes/editor/: block_route.rs  mod.rs  style_route.rs  user_route.rs
src/servers/: io.rs  mod.rs  socket.rs  web.rs
src/structs/: account.rs  area.rs  block.rs  block_data.rs  content.rs  default_block.rs  history.rs  metadata.rs  mod.rs  page.rs  prop.rs  styles.rs  table.rs  user.rs  words.rs
