[package]
name = "motion-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.33",features = ["serde"] }
failure = "0.1.8"
mongodb = { version = "2.8.0", features = ["bson-uuid-0_8"] }
rand = "0.8.5"
serde_json = "1.0.112"
time = { version = "0.3.31", features = ["local-offset"] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = "1.0.196"
dotenv = "0.15.0"
handlebars = "5.1.0"
futures-util = "0.3.30"
url = "2.5.0"
bytes = "1.5.0"
futures = "0.3.30"
axum = "0.7.4"
socketioxide = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors"] }
thiserror = "1.0.56"
axum-client-ip = "0.5.0"
cors = "0.1.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
tower-cookies = "0.10.0"
axum-extra = "0.9.2"
redis = { version = "0.24.0", features = [ "cluster","cluster-async","aio","tokio-comp" ] }
async-std = "1.12.0"