[package]
name = "motion-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33",features = ["serde"] }
mongodb = { version = "2.8.0", features = ["bson-uuid-0_8"] }
serde_json = "1.0.112"
time = { version = "0.3.31", features = ["local-offset"] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = "1.0.196"
dotenv = "0.15.0"
axum = { version = "0.7.4", features = ["ws"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors"] }
axum-client-ip = "0.5.0"
cors = "0.1.0"
tower-cookies = "0.10.0"
axum-extra = "0.9.2"
async-std = "1.12.0"
radix-tree = "0.2.0"
rangemap = "1.5.1"
range-compare = "0.1.1"
serde_with = "1.14.0"
socketioxide = "0.12.0"
